--- a/examples/index.html
+++ b/examples/index.html
@@ -2,45 +2,6 @@
 <html>
     <head>
         <title>jQuery Sampling: designer/programmer cooperation tool</title>
-        <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-        <script src="../jquery.sampling.js"></script>
-        <script type="text/javascript" language="javascript" charset="utf-8">
-        <!--
-        var $samples, $row_sample, $row;
-        $(document).ready(function() {
-            //1: Gather samples
-            $samples = $(document).sampling('gather');
-
-            //2: Select one example
-            $row_sample = $samples.sampling('.special');
-
-            //3: Customize it!
-            $row = $row_sample.sampling('new', [
-                {
-                    id:1,
-                    name:'Tie Fighter',
-                    type:'Starfighter',
-                    affiliation:'Galactic Empire'
-                },
-                {
-                    id:2,
-                    name:'X-Wing Fighter',
-                    type:'Starfighter',
-                    affiliation:'Rebel Alliance'
-                },
-                {
-                    id:3,
-                    name:'Imperial Star Destroyer',
-                    type:'Imperial cruiser',
-                    affiliation:'Galactic Empire'
-                }
-            ]);
-
-            //4: Add to the document
-            $('#spaceship_table').append($row);
-        });
-        -->
-        </script>
     </head>
     <body>
         <table id="spaceship_table" border="1">
@@ -72,5 +33,45 @@
             </tr>
             </tbody>
         </table>
+
+        <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript" language="javascript" charset="utf-8" ></script>
+        <script src="http://code.jquery.com/qunit/git/qunit.js" type="text/javascript" language="javascript" charset="utf-8"></script>
+
+        <script src="../jquery.sampling.js"></script>
+        <script type="text/javascript" language="javascript" charset="utf-8">
+            var $samples, $row_sample, $row;
+            $(document).ready(function() {
+                //1: Gather samples
+                $samples = $(document).sampling('gather');
+
+                //2: Select one example
+                $row_sample = $samples.sampling('.special');
+
+                //3: Customize it!
+                $row = $row_sample.sampling('new', [
+                    {
+                        id:1,
+                        name:'Tie Fighter',
+                        type:'Starfighter',
+                        affiliation:'Galactic Empire'
+                    },
+                    {
+                        id:2,
+                        name:'X-Wing Fighter',
+                        type:'Starfighter',
+                        affiliation:'Rebel Alliance'
+                    },
+                    {
+                        id:3,
+                        name:'Imperial Star Destroyer',
+                        type:'Imperial cruiser',
+                        affiliation:'Galactic Empire'
+                    }
+                ]);
+
+                //4: Add to the document
+                $('#spaceship_table').append($row);
+            });
+        </script>
     </body>
 </html>
