Committing changes for first stable release

--- a/examples/include_contents.html
+++ b/examples/include_contents.html
@@ -1,7 +1,11 @@
-<h1>Here is the examples menu</h1>
-<a class="_inc" href="./menu.html">This will be replaced by contents of menu.html</a>
+<section id="firstSection">
+    <h1>Here is the examples menu</h1>
+    <a class="_inc" href="./menu.html">This will be replaced by contents of menu.html</a>
+</section>
 
-<h1>Here is the JSON data used by examples</h1>
-<pre>
-    <a class="_inc" href="./data.json">This will be replaced by contents of data.json</a>
-</pre>
+<section id="secondSection">
+    <h1>Here is the JSON data used by examples</h1>
+    <pre>
+        <a class="_inc" href="./data.json">This will be replaced by contents of data.json</a>
+    </pre>
+</section>
