--- a/examples/menu.html
+++ b/examples/menu.html
@@ -5,4 +5,5 @@
     <li><a href="simple.html">Simple</a></li>
     <li><a href="include.html">Include</a></li>
     <li><a href="limited.html">Limited include</a></li>
+    <li><a href="sampleModes.html">Sample modes</a></li>
 </ul>
