--- a/examples/generator.html
+++ b/examples/generator.html
@@ -1,11 +1,62 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>jQuery Sampling: designer/programmer cooperation tool</title>
+        <title>jQuery Sampling | Samples | Generator</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
+
+        <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript" language="javascript" charset="utf-8" ></script>
+
+        <script src="../jquery.sampling.js"></script>
+        <script type="text/javascript" language="javascript" charset="utf-8">
+            var $samples, $row_sample, $rows;
+
+            $(document).ready(function() {
+
+                function generateShips(index, limit) {
+                    if (index == limit) { return null; }
+
+                    function rnd(min, max) {
+                        return Math.floor(Math.random() * (max - min)) + min;
+                    }
+
+                    function generateName() {
+                        var l = rnd(3, 5);
+                        var alpha = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+                        var numbers = '0123456789';
+                        var name = alpha[rnd(0, alpha.length)] + '-';
+                        for (var i=0; i<l; i++) {
+                            name += numbers[rnd(0, numbers.length)];
+                        }
+                        return name;
+                    }
+
+                    if (rnd(0, 2)) { this.addClass('highlight'); }
+
+                    return {
+                        '.id':index,
+                        '.name':generateName(),
+                        '.type':['Starfighter', 'Imperial cruiser', 'Light freighter'][rnd(0, 3)],
+                        '.affiliation':['Galactic Empire', 'Rebel Alliance'][rnd(0, 2)]
+                    };
+                }
+
+                //1: Gather samples
+                $samples = $(document).sampling('gather');
+
+                //2: Select one example
+                $row_sample = $samples.sampling('select', '.standard');
+
+                //3: Customize it!
+                $rows = $row_sample.sampling('new', generateShips, {}, 10);
+
+                //4: Add to the document
+                $('#spaceship_table tbody').append($rows);
+            });
+        </script>
     </head>
     <body>
         <h1>Star Wars Spaceship Table</h1>
+        <p>Refresh to generate new ones (highlighting is randomized)</p>
         <table id="spaceship_table">
             <thead>
                 <tr>
@@ -51,73 +102,5 @@
                 </tr>
             </tbody>
         </table>
-
-        <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript" language="javascript" charset="utf-8" ></script>
-        <script src="http://code.jquery.com/qunit/git/qunit.js" type="text/javascript" language="javascript" charset="utf-8"></script>
-
-        <script src="../jquery.sampling.js"></script>
-        <script type="text/javascript" language="javascript" charset="utf-8">
-            var $samples, $row_sample, $rows;
-
-            $(document).ready(function() {
-                // Get data
-                var maps = [];
-                $.ajax({
-                    async: false,
-                    url:'data.json',
-                    dataType: 'json',
-                    success: function(data) {
-                        $.each(data, function(index, ship){
-                            maps.push({
-                                '.id':ship.id,
-                                '.name':ship.name,
-                                '.type':ship.type,
-                                '.affiliation':ship.affiliation
-                            });
-                        });
-                    }
-                });
-
-                function generateShips(index, limit) {
-                    if (index == limit) { return null; }
-
-                    function rnd(min, max) {
-                        return Math.floor(Math.random() * (max - min)) + min;
-                    }
-
-                    function generateName() {
-                        var l = rnd(3, 5);
-                        var alpha = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
-                        var numbers = '0123456789';
-                        var name = alpha[rnd(0, alpha.length)] + '-';
-                        for (var i=0; i<l; i++) {
-                            name += numbers[rnd(0, numbers.length)];
-                        }
-                        return name;
-                    }
-
-                    if (rnd(0, 2)) { this.addClass('highlight'); }
-
-                    return {
-                        '.id':index,
-                        '.name':generateName(),
-                        '.type':['Starfighter', 'Imperial cruiser', 'Light freighter'][rnd(0, 3)],
-                        '.affiliation':['Galactic Empire', 'Rebel Alliance'][rnd(0, 2)]
-                    };
-                }
-
-                //1: Gather samples
-                $samples = $(document).sampling('gather');
-
-                //2: Select one example
-                $row_sample = $samples.sampling('select', '.standard');
-
-                //3: Customize it!
-                $rows = $row_sample.sampling('new', generateShips, {}, 10);
-
-                //4: Add to the document
-                $('#spaceship_table tbody').append($rows);
-            });
-        </script>
     </body>
 </html>
