--- a/examples/include.html
+++ b/examples/include.html
@@ -1,17 +1,16 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>jQuery Sampling: designer/programmer cooperation tool</title>
-    </head>
-    <body>
-        <a class="_inc" href="./include_contents.html">This will be replaced by contents of include_contents.html</a>
+        <title>jQuery Sampling | Samples | Include</title>
 
         <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript" language="javascript" charset="utf-8" ></script>
-        <script src="http://code.jquery.com/qunit/git/qunit.js" type="text/javascript" language="javascript" charset="utf-8"></script>
 
         <script src="../jquery.sampling.js"></script>
         <script type="text/javascript" language="javascript" charset="utf-8">
              $(function() { $(document).sampling('include'); });
         </script>
+    </head>
+    <body>
+        <a class="_inc" href="./include_contents.html">This will be replaced by contents of include_contents.html</a>
     </body>
 </html>
