--- a/examples/oddEven.html
+++ b/examples/oddEven.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>jQuery Sampling: designer/programmer cooperation tool</title>
+        <title>jQuery Sampling | Samples | Odd-even</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
 
         <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript" language="javascript" charset="utf-8" ></script>
-        <script src="http://code.jquery.com/qunit/git/qunit.js" type="text/javascript" language="javascript" charset="utf-8"></script>
 
         <script src="../jquery.sampling.js"></script>
         <script type="text/javascript" language="javascript" charset="utf-8">
@@ -13,14 +12,14 @@
 
             $(document).ready(function() {
                 // Get data
-                var maps = [];
+                var ships = [];
                 $.ajax({
                     async: false,
                     url:'data.json',
                     dataType: 'json',
                     success: function(data) {
                         $.each(data, function(index, ship){
-                            maps.push({
+                            ships.push({
                                 '.id':ship.id,
                                 '.name':ship.name,
                                 '.type':ship.type,
@@ -33,19 +32,14 @@
                 //1: Gather samples
                 $samples = $(document).sampling('gather');
 
-                var $table_body = $('#spaceship_table tbody');
-                $.each(maps, function(index, ship) {
-                    var parity_class = index % 2 == 0 ? '.odd' : '.even';
+                //2: Select examples
+                $row_samples = $($samples.sampling('select', '.odd:first, .even:first'));
 
-                    //2: Select one example
-                    $row_sample = $samples.sampling('select', parity_class);
+                //3: Customize them
+                $rows = $row_samples.sampling('new', ships, {sampleSelectMode:'altern'});
 
-                    //3: Customize it!
-                    $row = $row_sample.sampling('new', ship);
-
-                    //4: Add to the document
-                    $table_body.append($row);
-                });
+                //4: Add to the document
+                $('#spaceship_table tbody').append($rows);
 
             });
         </script>
@@ -69,14 +63,14 @@
                     <td class="type">sample_type1</td>
                     <td class="affiliation">sample_affiliation1</td>
                 </tr>
-                <tr class="_s even" title="Even row" style="background-color:grey;">
+                <tr class="_s even" title="Even row">
                     <td class="id">sample_id2</td>
                     <td class="name">sample_name2</td>
                     <td class="type">sample_type2</td>
                     <td class="affiliation">sample_affiliation2</td>
                 </tr>
                 <!-- Use this to highlight some special row -->
-                <tr class="_s odd highlight" title="Special" style="background-color:pink; font-weight:bold;">
+                <tr class="_s odd highlight" title="Special">
                     <td class="id">sample_id3</td>
                     <td class="name">sample_name3</td>
                     <td class="type">sample_type3</td>
