--- a/examples/simple.html
+++ b/examples/simple.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>jQuery Sampling: designer/programmer cooperation tool</title>
+        <title>jQuery Sampling | Samples | Simple</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
 
         <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript" language="javascript" charset="utf-8" ></script>
-        <script src="http://code.jquery.com/qunit/git/qunit.js" type="text/javascript" language="javascript" charset="utf-8"></script>
 
         <script src="../jquery.sampling.js"></script>
         <script type="text/javascript" language="javascript" charset="utf-8">
